<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_contact_search"
    tools:context=".chatsActivity.Contact_search">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e9edc9"
        android:padding="10dp"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search User"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#403d39"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/back_btn"/>

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/back"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="#403d39"
            android:layout_centerVertical="true"
            android:id="@+id/back_btn"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/search_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/seach_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toLeftOf="@id/search_user_btn"
            android:background="@drawable/rounded_for_recycle"
            android:backgroundTint="#fffcf2"
            android:elevation="4dp"
            android:hint="Username"
            android:padding="10dp" />

        <ImageButton
            android:id="@+id/search_user_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/search"
            app:tint="#403d39" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_user_layout"
        android:padding="10dp"
        android:id="@+id/search_user_recycler_view"
        />


</RelativeLayout>











