<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_inside_chat"
    tools:context=".chatsActivity.Inside_chat">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGreen"
        android:padding="10dp"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar">
        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/back"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="#403d39"
            android:layout_centerVertical="true"
            android:id="@+id/back_btn"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#403d39"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/profile_pic_image_view"
            android:id="@+id/other_username"
            />

        <ImageView
            android:id="@+id/profile_pic_image_view"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/circular"
            android:backgroundTint="@color/white"
            android:layout_toRightOf="@id/back_btn"
            android:padding="4dp"
            android:src="@drawable/img" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="-1dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:id="@+id/bottom_layout">

        <EditText
            android:id="@+id/chat_message_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toLeftOf="@id/message_send_btn"
            android:background="@drawable/round_textedit"
            android:elevation="4dp"
            android:hint="Write message here"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="10dp" />

        <ImageButton
            android:id="@+id/message_send_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/send"
            app:tint="#a3b18a" />

    </RelativeLayout>


</RelativeLayout>








