...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".chatsActivity.Chats"
    android:id="@+id/fragment_chats">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:src="@drawable/search"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="#403d39"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:id="@+id/chat_search_btn"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/emptyChat"
        android:layout_width="match_parent"
...
