<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login"
    tools:context=".regLogInActivity.Login">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_textedit"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/signUpText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SigninPass" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/text_selector"
        android:text="@string/sign_up_instead"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/resetText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/resetText"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/text_selector"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpText" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="165dp"
        android:layout_height="195dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/SigninEmail"
        android:layout_width="254dp"
        android:layout_height="38dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_textedit"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/SigninPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/SigninPass"
        android:layout_width="254dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_textedit"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text|textPassword"
        android:singleLine="false"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SigninEmail"
        android:autofillHints="password" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SigninPass"
        app:layout_constraintVertical_bias="0.218" />

</androidx.constraintlayout.widget.ConstraintLayout>