...
            android:layout_height="37dp"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:padding="10dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/emailText"
            app:layout_constraintEnd_toStartOf="@+id/logout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/usernameText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64" />

        <TextView
...
